--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: #EEEEEE;
   }
 
 
@@ -34,7 +35,7 @@ header div.back div.container {
 
 header div.back {
     height: 100px;
-    background-color: #364552;
+    background-color: #1E1C1C;
     /* border-bottom: dashed 0.5px #d7d7d7; */
 }
 
@@ -126,7 +127,7 @@ header div.back div.menu a.logo p {
         top: 100%;
         left: 0;
         right: 0;
-        background-color: #2A394F;
+        background-color: #272727;
         display: none;
 
         transition: 1s ease-in;
@@ -155,12 +156,10 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    background-color: #222;
-    padding-inline: 20px;
+    background-color: #1E1C1C;
+    /* padding-inline: 20px; */
     width: 100%;
     height: fit-content;
-    padding: 2rem;
 
     margin-top: auto; /* PARA FOOTER SIEMPRE AL FINAL */ /* Knowledge Source: https://www.30secondsofcode.org/css/s/footer-at-the-bottom/ */
 }
@@ -179,6 +178,7 @@ footer {
     justify-content: center;
     flex-wrap: wrap;
     gap: 1.5rem;
+    padding: 2rem 0.5rem;
 }
 
 .social-media-button {
@@ -232,17 +232,23 @@ footer {
 }
 /* Close BOTONES SOCIAL MEDIA */
 
-footer p {
-    color: #767676;
-    font-size: 18px;
-    transition: 0.5s ease-out;
-    text-align: center;
-    padding-top: 1rem;
+footer #copyright {
+    background-color: #272727;
+    display: inline-block;
 }
 
-footer p:hover {
-    color: #C2AF67;
-    /* cursor: pointer; */
+footer div p {
+    color: #767676;
+    font-family: courier-std, monospace;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    transition: 0.5s ease-out;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+footer div p:hover {
+    color: #76ABAE;
 }
 /* ++++++++++++++++++ */
 /* FOOTER STYLE Close */
@@ -258,17 +264,108 @@ section.index_open article.main_photo {
     justify-content: center;
 }
 
-section.index_open article.main_photo img {
-    width: 100%;
-    max-width: 1100px;
+section.index_open article.main_photo {
+    width: 100vw;
+    max-width: 1920px;
+    height: 100vh;
+    max-height: 650px;
+    overflow: hidden;
+    background-image: url(img/FOTO\ PRINCIPAL.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-section.index_open p {  /* TRES PUNTITOS no se hace así, pero como deco los 3 puntitos como si fuera un carousel de img anda */
-    text-align: center;
-    font-size: 35px;
-    color: #767676;
-    padding-top: 1rem;
+/* +++++++++++++++++ */
+/* ÚLTIMOS TRABAJOS */
+div.recent_work_title-container {
+    display: flex;
+    justify-content: center;
+    margin: 30px 10px;
 }
+div h3.recent_work_title {
+    text-align: center;
+    padding: 10px 0px;
+    border-top: 0.1rem solid #1E1C1C;
+    border-bottom: 0.3rem solid #1E1C1C;
+    border-right: 0.3rem solid #1E1C1C;
+    border-left: 0.1rem solid #1E1C1C;
+    width: 90%;
+    background-color: #FFFFFF;
+    font-family: "adobe-caslon-pro", serif;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+div.recent_work_container {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    max-width: 1920px;
+    min-width: 370px;
+    margin-bottom: 30px;
+}
+
+div.recent_work_container section.recent_work {
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    
+    box-shadow: 1px 1px 5px lightgrey;
+}
+
+div.recent_work_container section.recent_work div.recent_img {
+    display: inline-block;
+    padding: 10px;
+    width: min-content;
+    height: fit-content;
+    overflow: hidden;
+}
+
+div.recent_work_container section.recent_work div.recent_img article {
+    margin-bottom: 10px;
+}
+
+div.recent_work_container section.recent_work div.recent_img article.img1 {
+    background-image: url(img/boda.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 370px;
+    height: 400px;
+}
+
+div.recent_work_container section.recent_work div.recent_img article.img2 {
+    background-image: url(img/real_estate.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 370px;
+    height: 400px;
+}
+
+div.recent_work_container section.recent_work div.recent_img article.img3 {
+    background-image: url(img/boda-lgtb.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 370px;
+    height: 400px;
+}
+
+div.recent_work_container section.recent_work div.recent_img div h4 {
+    margin-bottom: 10px;
+    font-family: "adobe-caslon-pro", serif;
+    font-size: 24px;
+
+}
+
+div.recent_work_container section.recent_work div.recent_img div p {
+    color: #a1a1a1;
+    font-size: 14PX;
+    text-align: justify;
+    margin-bottom: 10px;
+}
+
+
+
 /* ++++++++++++++ */
 /* INDEX PAGE Fin */
 /* ++++++++++++++ */
