--- a/style.css
+++ b/style.css
@@ -541,9 +541,144 @@ div.recent_work_container section.recent_work div.recent_img div p {
 
 .error {
     border: 2px solid red;
-    color: red;
 }
 
 /* ++++++++++++++++ */
 /* MENSAJE DE ERROR fin  */
+/* ++++++++++++++++ */
+
+
+/* +++++++++++++++++++++++++++++++++ */
+/* ABOUT PAGE Open */     /* Elias   */
+/* +++++++++++++++++++++++++++++++++ */
+
+
+.quienesomos {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    }
+
+.somos{
+    background-image: url(./img/paisaje2.jpg);
+    background-size: cover;
+    height: 1400px;
+    font-size: xx-large; 
+    font-family:'bio-sans', sans-serif;
+    text-align: justify;
+    padding: 60px 50px;
+    overflow: auto;
+}
+
+.somosexpl {
+    border: 10px solid rgb(0, 0, 0);
+    margin: 50px;
+    color: #1E1C1C;
+    font-family:'bio-sans', sans-serif;
+    text-align: center;
+}
+
+.row{
+    color:#1E1C1C;
+    font-size: xx-large; 
+    font-family:'adobe-caslon-pro', serif;
+    text-align: justify;
+    background-image: url(./img/hoja.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    padding: 5px;
+}
+
+.col {
+    border: 1px solid;
+    background-color: rgba(210, 218, 223, 0.582);
+    margin: 20px;
+    color: #1E1C1C;
+}
+
+#nota{
+    color:#1E1C1C;
+    /*margin-top: 100px;
+    margin-bottom: 200px;*/
+    font-family:'bio-sans', sans-serif;
+    font-size: xx-large;
+    text-align: center;
+    background-image: url(./img/paisaje2.jpg);
+    padding: 70px 5px;
+}
+
+#info {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size:large;
+    /*width: 100vh;*/
+    padding: auto;
+    font-family: "Pacifico", cursive;
+    font-weight: 600;
+    font-style: normal;
+    background-color: #707070;
+    text-align: center;
+    }
+
+.carouselExampleInterval {
+    padding: 0%;
+    }
+
+@media only screen and (min-width: 720px) {
+        
+    .somos{
+    height: 1000px;
+    font-size:xx-large; 
+    font-family:'bio-sans', sans-serif;
+    text-align: center;
+    padding: 200px;
+    overflow: auto;
+    }
+       
+    .row{
+    background-image: url(./img/hoja.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    padding: 200px;
+
+    color:#1E1C1C;
+    /*margin: 50px;
+    margin-bottom: 50px;*/
+    font-size: xx-large; 
+    font-family:'bio-sans', sans-serif;
+    text-align: justify;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr)
+    }
+
+    #nota{
+    color: #1E1C1C;
+    /*margin-top: 100px;
+    margin-bottom: 200px;*/
+    font-size: xx-large;
+    text-align: center;
+    background-image: url(./img/paisaje2.jpg);
+    padding: 200px;
+    }
+
+    #info {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: x-large;
+    /*width: 100vh;*/
+    padding: auto;
+    font-family: "Pacifico", cursive;
+    font-weight: 600;
+    font-style: normal;
+    background-color: #707070;
+    }
+        
+}
+   
+/* ++++++++++++++++ */
+/* ABOUT PAGE Fin */
 /* ++++++++++++++++ */
