--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
     position: sticky;
     top: 0px;
     height: fit-content;
+    z-index: 1000; /* Asegura que el header tenga un z-index alto */
 } 
 
 header div.back div.container {
@@ -36,7 +37,6 @@ header div.back div.container {
 header div.back {
     height: 100px;
     background-color: #1E1C1C;
-    /* border-bottom: dashed 0.5px #d7d7d7; */
 }
 
 header div.back div.menu {
@@ -47,11 +47,10 @@ header div.back div.menu {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1000;
+    z-index: 1000; /* Asegura que el menu tenga un z-index alto */
 }
 
 header div.back div.menu a.logo {
-    /* padding: 20px 0; */
     padding-left: 20px;
     display: flex;
     align-items: center;
@@ -85,8 +84,7 @@ header div.back div.menu a.logo p {
     margin: 20px;
     color: #FFFFFF;
     display: block;
-
-    transition: 0.8s ease; /* = transition to hover effect */
+    transition: 0.8s ease; /* Transition to hover effect */
 }
 
 .menu .navbar ul li a:hover {
@@ -109,7 +107,6 @@ header div.back div.menu a.logo p {
 
 /* NAVBAR STYLE responsive Ini */
 @media (max-width: 1341px) {
-
     .menu {
         padding: 28px;
     }
@@ -129,7 +126,6 @@ header div.back div.menu a.logo p {
         right: 0;
         background-color: #272727;
         display: none;
-
         transition: 1s ease-in;
     }
     
@@ -140,8 +136,8 @@ header div.back div.menu a.logo p {
     #menu:checked ~ .navbar {
         display: initial;
     }
-
 }
+
 /* NAVBAR STYLE responsive Fin */
 /* ++++++++++++++++++ */
 /* NAVBAR STYLE Close */
@@ -384,20 +380,53 @@ div.recent_work_container section.recent_work div.recent_img div p {
     max-width: 1400px;
     margin: 0 auto;
     padding: 20px 10px;
-  }
-  
-  .gallery img {
+}
+
+.photo-container {
+    position: relative;
     width: 100%;
     max-width: 350px;
     height: 300px;
-    object-fit: cover;
+    overflow: hidden;
     border-radius: 10px;
-  }
-  
-  .gallery::after {
-    content: "";
-    width: 350px;
-  }
+}
+
+.photo-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.photo-container .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    border-radius: 10px;
+}
+
+.photo-container .overlay p {
+    color: #fff;
+    font-size: 18px;
+    text-align: center;
+    margin: 0 20px;
+}
+
+.photo-container:hover img {
+    transform: scale(1.05);
+}
+
+.photo-container:hover .overlay {
+    opacity: 1;
+}
 /* ++++++++++++++++++ */
 /* PORTFOLIO PAGE Fin */
 /* ++++++++++++++++++ */
