--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ header div.back div.menu a.logo {
     align-items: center;
     justify-content: center;
     align-self: center;
+    text-decoration: none;
+    
 }
 
 header div.back div.menu a.logo img {
@@ -61,7 +63,7 @@ header div.back div.menu a.logo img {
 }
 
 header div.back div.menu a.logo p {
-    padding-left: 20px;
+    padding-left: 10px;
     text-transform: uppercase;
     font-size: 36px;
     font-weight: 800;
@@ -128,6 +130,7 @@ header div.back div.menu a.logo p {
         opacity: 0;
         z-index: 2000;
         transition: max-height 0.5s ease, opacity 0.5s ease;
+        border-radius: 0 0 0.25cm 0.25cm ;
     }
     
     .menu .navbar ul li {
@@ -267,24 +270,60 @@ footer div p:hover {
 /* ++++++++++++++++++ */
 
 
+/* +++++++++++++++++++++++++ */
+/* ICONO DE VOLVER AL INICIO Open */
 
-/* +++++++++++++++++++++++++++++ */
-/* INDEX PAGE Ini */    /* Anita */
-/* +++++++++++++++++++++++++++++ */
-section.index_open article.main_photo {
-    display: flex;
-    justify-content: center;
+a#top {
+    display: none;
+    background-color: EFEFEF;
+    /* border: 1px solid #1C1C1C; */
+    padding: 1rem 1.2rem;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 30%;
+    position: fixed;
+    bottom: 1.8rem;
+    right: 0.8rem;
+    background-color: #76ABAE;
+    transition: 0.2s ease-out;
+    opacity: 0.7;
+    & i {
+        color: #FFFFFF;
+    }
 }
 
-section.index_open article.main_photo {
-    height: 100vh;
+a#top i {
+    font-size: 1.5rem;
+    transition: 0.2s ease-out;
+}
+
+a#top:hover {
+    background-color: #5abdc2;
+}
+
+a#top:hover i  {
+    transform: translateY(-4px);
+}
+/* ICONO DE VOLVER AL INICIO Open */
+/* +++++++++++++++++++++++++ */
+
+
+
+/* +++++++++++++++++++++++++++++ */
+/* INDEX PAGE Ini /    / Anita */
+/* +++++++++++++++++++++++++++++ */
+
+.carousel-inner {
+    width: 100%;
     max-height: 650px;
-    overflow: hidden;
-    background-image: url(img/FOTO\ PRINCIPAL.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+  }
+  
+  .carousel-item img {
+    width: 100%;
+    height: 650px;
+    object-fit: cover; 
+  }
+
 
 /* +++++++++++++++++ */
 /* ÚLTIMOS TRABAJOS */
@@ -483,6 +522,7 @@ a.mybtn:hover {
   /* Add a background color to the active dot/circle */
   .active, .dot:hover {
     background-color: #717171;
+    border-radius: 0.25cm;
   }
   
   /* Add an italic font style to all quotes */
